Fix font being too big on mobile devices

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -15,6 +15,24 @@ section#home-header {
   margin-top: -$body-top-padding;
   min-height: 100vh;
 
+  .title {
+    font-size: 4.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+
+    @media (max-width: 991.98px) {
+      font-size: 4rem;
+    }
+
+    @media (max-width: 767.98px) {
+      font-size: 3.5rem;
+    }
+
+    @media (max-width: 575.98px) {
+      font-size: 3rem;
+    }
+  }
+
   .container {
     margin: $body-top-padding auto;
     height: 100%;
